--- a/lesson_1/1/home_work/3.html
+++ b/lesson_1/1/home_work/3.html
@@ -31,35 +31,34 @@ console.log(3 - 4 * 2);
 -->
   <script>
     "use strict";
-    console.log(10 / +"2,5");
-   /* 1. к 10 прибавляем 10 получаем 20.
-               2. к 20 прибавляем строку 10 получаем 2010.
-               3. с помощью console.log выводим число 2010.
- 
-               1. к 10 прибавляем строку 10 получаем 1010.
-               2. к 1010 прибавляем 10 получаем 101010.
-               3. с помощью console.log выводим число 101010.
- 
-               1. к 10 прибавляем 10 получаем 20.
-               2. к 20 прибавляем строку "10" преобразованную в число, получаем 30.
-               3. с помощью console.log выводим число 30.
- 
-               1. число 10 делим на пустую строку с ортицательным значением.
-               2. с помощью console.log выводим бесконечность со знаком минус.
- 
-               1. число 10 делим на строку преобразованную в число 2,5. Т.к. дробные числа нельзя разделять запятой, деление не произойдет.
-               2. с помощью console.log выводим значение Nan (неопределенное значение).
-          
- 
- 
- 
- 
- 
- 
- 
-            */
+    /* 10 + 10 + "10"
+    1. к 10 прибавляем 10 получаем 20.
+    2. к 20 прибавляем строку 10 получаем 2010.
+    3. с помощью console.log выводим строку 2010.*/
+    console.log(10 + 10 + "10");
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+    /*10 + "10" + 10
+    1. к 10 прибавляем строку 10 получаем строку 1010.
+    2. к строке 1010 прибавляем 10 получаем 101010.
+    3. с помощью console.log выводим строку 101010. */
+    console.log(10 + "10" + 10);
+
+    /*10 + 10 + +"10"
+    1. к 10 прибавляем 10 получаем 20.
+    2. операция +"10" преобразовывает строку в число 10.
+    3. к 20 прибавляем число 10, получаем 30.
+    4. с помощью console.log выводим число 30. */
+    console.log(10 + 10 + +"10");
+
+    /*10 / -""
+    1. число 10 делим на пустую строку с ортицательным значением.
+    2. с помощью console.log выводим бесконечность со знаком минус. */
+    console.log(10 / -"");
+
+    /*10 / +"2,5"
+    1. число 10 делим на строку преобразованную в число 2,5. Т.к. дробные числа нельзя разделять запятой, деление не произойдет.
+    2. с помощью console.log выводим значение Nan (неопределенное значение). */
+    console.log(10 / +"2,5");
   </script>
 </body>
 
