--- a/lesson_2/2/home_work/6.html
+++ b/lesson_2/2/home_work/6.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Homework</title>
 </head>
+
 <body>
-<!--
+  <!--
 Необязательное задание.
 
 Необходимо реализовать функцию, которая будет принимать первым аргументом
@@ -22,25 +24,56 @@ console.log(declinationOfNumber(5, "стул", "стула", "стульев"));
 Функция должна работать с любым словом и любым целым положительным числом.
 Все аргументы, которые будут передаваться функции будут верны.
 -->
-<script>
-  "use strict";
+  <script>
+    "use strict";
 
-  function declinationOfNumber(count, one, two, five) {
+    function declinationOfNumber(count, one, two, five) {
 
-  }
+      switch (count) {
+        case 1:
+          return one;
+          break;
+        case 2:
+          return two;
+          break;
+        case 5:
+          return five;
+          break;
+        default:
+          return undefined;
+      }
+      // if (count === 1) {
+      //   return one;
+      // } else if (count === 2) {
+      //   return two;
+      // } else if (count === 5) {
+      //   return five;
+      // } else {
+      //   return undefined;
+      // }
+    }
 
-  // Число яблок, можно пробовать поставить свое целое, положительное число.
-  const applesNumber = 5;
-  // Получаем от функции одно из слов "яблоко", "яблока" или "яблок".
-  const word = declinationOfNumber(applesNumber, "яблоко", "яблока", "яблок");
-  // Выводим корректную строку, например:
-  // "У меня есть 1 яблоко."
-  // "У меня есть 2 яблока."
-  // "У меня есть 5 яблок."
-  // При любом целом, положительном числе в applesNumber, строка, которая
-  // выводится в console.log, должна иметь правильное склонение слова "яблоко".
-  console.log(`У меня есть ${applesNumber} ${word}.`);
+    // Число яблок, можно пробовать поставить свое целое, положительное число.
+    const applesNumber = 5;
+    // Получаем от функции одно из слов "яблоко", "яблока" или "яблок".
+    const wordApples = declinationOfNumber(applesNumber, "яблоко", "яблока", "яблок");
+    // Выводим корректную строку, например:
+    // "У меня есть 1 яблоко."
+    // "У меня есть 2 яблока."
+    // "У меня есть 5 яблок."
+    // При любом целом, положительном числе в applesNumber, строка, которая
+    // выводится в console.log, должна иметь правильное склонение слова "яблоко".
+    console.log(`У меня есть ${applesNumber} ${wordApples}.`);
 
-</script>
+    const ballsNumber = 2;
+    const wordBalls = declinationOfNumber(ballsNumber, "мяч", "мяча", "мячей");
+    console.log(`У меня есть ${ballsNumber} ${wordBalls}.`);
+
+    const chairsNumber = 1;
+    const wordChairs = declinationOfNumber(chairsNumber, "стул", "стула", "стульев");
+    console.log(`У меня есть ${chairsNumber} ${wordChairs}.`);
+
+  </script>
 </body>
+
 </html>
