--- a/lesson_3/4.html
+++ b/lesson_3/4.html
@@ -46,22 +46,41 @@
       },
     ];
 
+    const result = products.filter(function (product) {
+      if ("photos" in product) {
+        return product.photos.length >= 1;
+      }
+    });
+    console.log(result);
 
-    const resulte = products.filter(products => products.photos.length > 1);
 
-    console.log(products.filter(
-      product => "photos" in product && product.photos.length !== 0
-    ));
 
-    products.sort((product1, product2) => product1.price - product2.price);
+    products.sort(function (product1, product2) {
+      if (product2.price > product1.price) {
+        return -1;
+      }
+      if (product1.price > product2.price) {
+        return 1;
+      }
+      return 0;
+    });
     console.log(products);
 
 
 
 
-    // if (products[1].photos.length > 0) {
-    //   console.log(products[1]);
-    // }
+    // const resulte = products.filter(products => products.photos.length > 1);
+
+    // console.log(products.filter(
+      // product => "photos" in product && product.photos.length !== 0
+    // ));
+
+    // products.sort((product1, product2) => product1.price - product2.price);
+    // console.log(products);
+
+
+
+
 
   </script>
 </body>
